gtk/sass/3.22/_3rd-party.scss
/* ... */
// /************
//  * Corebird *
//  ************/

// use normal foreground colour
stack button.profile-button {
  &:checked { color: $fg_color; }
}

headerbar.titlebar box {
  button.toggle.account-button { // left-most account-button
    min-width: $icon_size;
    min-height: $icon_size;
    // it doesn't work
    padding: rem(6.7px) rem(10.7px) rem(6.7px);
    // revert to square button since we can't make perfect circle button
    border-radius: 2px;
    -gtk-outline-radius: 2px;

    // it doesn't work
    .avatar-round { border-color: transparent; }
  }

  button.image-button.toggle { // tweet button
    min-width: $icon_size * 1.5;
    min-height: $icon_size * 1.5;
    padding: if($ref_weight < 1.0,
             rem(($widget_size - $icon_size * 1.5 - 2px) / 2),
             rem(($widget_size - $icon_size * 1.5) / 2));
  }
}

// use asymmetrical separators
.background.csd box.vertical > stack > scrolledwindow,
.background.solid-csd box.vertical > stack > scrolledwindow {
  list > row.activatable.tweet {
    &:dir(ltr) {
      border-image: linear-gradient(to right,
                                    transparent 72px,
                                    $borders_color 72px,
                                    $borders_color)
                                    0 0 1 / 0 0 1px;
    }
    &:dir(rtl) {
      border-image: linear-gradient(to left,
                                    transparent 72px,
                                    $borders_color 72px,
                                    $borders_color)
                                    0 0 1 / 0 0 1px;
    }
  }
}


// /********
//  * Nemo *
//  ********/

.nemo-desktop.nemo-canvas-item {
  @extend .nautilus-desktop.nautilus-canvas-item;
}

.nemo-window {
  // workaround for invisible text in rename entry (Eeleditable.entry)
  .nemo-window-pane scrolledwindow widget > widget.entry {
    &, &:focus {
      transition: none;

      &:selected { // FIXME: selection node doesn't work?
        color: $selected_fg_color;
        background-color: $selected_bg_color;
      }
    }
  }

  infobar.error { // Administrative privileges
    label {
      font-size: 110%;
      font-weight: 700;
    }
  }

  // main tool-bar styling
  grid > box > box > toolbar.primary-toolbar {
    // draw bottom border and shadows
    border-bottom: 1px solid $borders_color;
    box-shadow: if($variant == 'light', $toolbar-shadow-light,
                                        $toolbar-shadow-dark);

    > button.flat.toggle { // 'back/forward'?
      &, image {
        min-height: $icon_size * 2.2;
        min-width: $icon_size * 2.2;
        padding: 0;
      }
    }

    .linked.raised > button,
    .raised > button {
      // path-bar widget buttons
      &, &.text-button.toggle {
        min-height: rem(26.7px);
        min-width: rem(26.7px);
        padding-top: 0;
        padding-bottom: 0;

        > widget { padding: rem(4px) 0; } // GtkArrow?
      }

      // general circle buttons
      &.image-button,
      &.image-button.toggle {
        &, image {
          min-height: $icon_size * 2.2;
          min-width: $icon_size * 2.2;
          padding: 0;
        }
      }
    }

    // optional buttons
    .raised:not(.linked) > button {
      &:not(.text-button):not(.toggle) {
        &, image {
          min-height: $icon_size * 2.2;
          min-width: $icon_size * 2.2;
          padding: 0;
        }
      }
    }

    // shrink height of entry node
    box.horizontal > widget > entry,
    button.text-button {
      padding-top: rem(5.3px);
      padding-bottom: rem(6.7px);
    }
  }

  // tweak notebook colour
  grid > paned > box > paned > box > notebook {
    &, > stack:not(:only-child) {
      background-color: $base_color;
    }
  }

  // remove double-border
  grid.vertical > paned.horizontal > box.vertical {
    > scrolledwindow.frame {
      border-width: 0;
    }
  }

  // force using flat-style on bottom bar
  grid.vertical > widget {
    background-color: $secondary_dark_color;
    box-shadow: if($variant=='light', $inline-shadow-light,
                                      $inline-shadow-dark);

    > box { padding: rem(2.7px); }

    > box > button.image-button {
      @extend %button_flat_normal;
      min-width: rem(13.3px);
      min-height: rem(29.3px);
      border-radius: 2px;
      -gtk-outline-radius: 2px;
      padding: 0 rem(10px) 0;
      border-image: -gtk-gradient(radial,
                                  center bottom, 0,
                                  center bottom, 0.001,
                                  to($track_color),
                                  to(transparent))
                                  0 0 0 / 0 0 0px;
      background-color: transparent;
      color: $secondary_fg_color;
      &:hover {
        @extend %button_flat_hover;
        border-image: none;
        background-color: transparent;
        color: $fg_color;
      }
      &:checked {
        @extend %button_flat_checked;
        border-image: -gtk-gradient(radial,
                                    center bottom, 0,
                                    center bottom, 0.5,
                                    to($selected_bg_color),
                                    to(transparent))
                                    0 0 2 / 0 0 2px;
        background-color: transparent;
        color: $fg_color;
        &:disabled {
          @extend %button_flat_checked_disabled;
          border-image: none;
          background-color: transparent;
          color: $insensitive_fg_color;
        }
      }
      &:disabled {
        @extend %button_flat_disabled;
        border-image: none;
        background-color: transparent;
        color: $insensitive_secondary_fg_color;
      }
    }

    box > separator.vertical { // remove separator
      min-width: 0;
      color: transparent;
      background-color: transparent;
    }
  }
}
/* ... */

